--- a/automations.yaml
+++ b/automations.yaml
@@ -298,26 +298,6 @@
       target:
         entity_id: fan.in_wall_fan_speed_control_500s_2
 
-- id: Text on sliding door open when away
-  alias: Text on sliding door open when away
-  trigger:
-    - entity_id: binary_sensor.z_wave_door_window_sensor_access_control_window_door_is_open_4
-      platform: state
-      to: "on"
-  condition:
-    - condition: state
-      entity_id: device_tracker.iphonexsmax
-      state: not_home
-  action:
-    - service: notify.pushover
-      data:
-        title: Home Assistant
-        message: Sliding Door Opened
-        data:
-          target: YOUR_TARGET
-          sound: pianobar
-          priority: 0
-
 # -----------------------------------------------------
 # OLD/OBSOLETE/TESTING
 # -----------------------------------------------------
@@ -359,3 +339,22 @@
 #         message: Jason showing as not home
 #   mode: single
 
+# - id: Text on sliding door open when away
+#   alias: Text on sliding door open when away
+#   trigger:
+#     - entity_id: binary_sensor.z_wave_door_window_sensor_access_control_window_door_is_open_4
+#       platform: state
+#       to: "on"
+#   condition:
+#     - condition: state
+#       entity_id: device_tracker.iphonexsmax
+#       state: not_home
+#   action:
+#     - service: notify.pushover
+#       data:
+#         title: Home Assistant
+#         message: Sliding Door Opened
+#         data:
+#           target: YOUR_TARGET
+#           sound: pianobar
+#           priority: 0
